feat: add currency to delivery method
